# zeroquant

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  docker-compose.yml
crates/trader-analytics/: Cargo.toml
crates/trader-analytics/src/: global_scorer.rs  journal_integration.rs  lib.rs  market_regime_calculator.rs  multi_timeframe_helpers.rs  route_state_calculator.rs  seven_factor.rs  structural_features.rs  timeframe_alignment.rs  trigger_calculator.rs
crates/trader-analytics/src/backtest/: engine.rs  mod.rs  slippage.rs
crates/trader-analytics/src/indicators/: structural.rs
crates/trader-analytics/src/ml/: features.rs  pattern.rs  service.rs
crates/trader-analytics/src/performance/: metrics.rs  tracker.rs
crates/trader-analytics/tests/: backtest_integration.rs  multi_timeframe_perf.rs  strategy_integration.rs
docs/: STRATEGY_DEVELOPMENT.md  agent_guidelines.md  api.md  architecture.md  collector_quick_start.md  deployment.md  development_rules.md  infrastructure.md  krx_openapi_spec.md  monitoring.md  multiple_kline_period_requirements.md  operations.md  prd.md  system_usage.md  tick_size_guide.md  todo.md
frontend/: index.html  openapi.json  package-lock.json  package.json  vite.config.ts
migrations/: 005_yahoo_candle_cache.sql  008_strategies_type_and_symbols.sql  009_rename_candle_cache.sql  010_backtest_results.sql  014_strategy_risk_capital.sql  015_trading_journal.sql  016_positions_credential_id.sql  017_journal_views.sql  018_journal_period_views.sql  019_fix_cumulative_pnl_types.sql  020_symbol_fundamental.sql  022_latest_prices_materialized_view.sql  023_symbol_fetch_failure_tracking.sql  13_watchlist.sql  (+6 more)
(+380 files in other folders)
